--- a/index.html
+++ b/index.html
@@ -1,63 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Site</title>
- </head>
- <body>
-   <table cellspacing ="15
-">
-      <tr >
-         <td><img border = "6" src="./Screenshot 2023-07-17 224727.png" alt="Vipul Picture"></td>
-         <td><h1>VIPUL RANJAN</h1>
-            <p><i>First year <b>B.Tech</b> student</i></p>
-            <p>I am a student at <strong>Indian Institute of Technology Jodhpur</strong>.My disciplines is <strong>Mechanical</strong> Engineering .</p></td>
-      </tr>
-   </table>
-    <hr size ='3' noshade >
-    <h3>Education</h3>
-    <ul>
-        <li>Introduction to Computer Science</li>
-        <li>Calculus And Linear Algebra</li>
-        <li>Dynamic Programming</li>
-        <li>Data Structure</li>
-    </ul>
-    <hr size ='3' noshade>
-    <h3><strong>Skills</strong></h3>
-    <table cellspacing ='10'>
-      <tr>
-         <td>
-          <table>
-            <tr>
-               <td>competitive programming </td>
-               <td>⭐</td>
-            </tr>
-            <tr>
-               <td>Developing</td>
-               <td>⭐</td>
-            </tr>
-          </table>
-         </td>
-      
-         <td>
-          <table><tr>
-            <td>Sport</td>
-            <td>⭐⭐⭐</td>
-           </tr>
-           <tr>
-            <td>Fun</td>
-            <td>⭐⭐⭐</td>
-           </tr>
-          </table>
-         </td>
-      </tr>
-    </table>
- </body>
- <footer>
-   <a href="https://www.instagram.com/funkyjester_150/" >Socials</a>
-   <a href="contact.html" target ="_blank"><b>Contact Me</b></a>
-   <a href="./input.html" target = "_blank">Input</a>
-   <a href="./Form.html" target ="_blank">Contact Form</a>
- </footer>
-</html> 
+    <title>vipul Ranjan</title>
+    <link rel="stylesheet" href="../New Site/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
+    <link rel="icon" href="../icons8-son-goku-windows-11-color-120.png">
+</head>
+<body>
+    <div class="top-container">
+        <img class="cloud1" src="https://tjkhara.github.io/sean-halpin-inspired/images/cloud.png" alt="cloud">
+       <h1>
+          I'm Vipul 
+       </h1>
+       <h2><span class="pro">A <u>Pro</u>grammer</span></h2>
+       <img class="cloud" src="https://tjkhara.github.io/sean-halpin-inspired/images/cloud.png" alt="cloud">
+       <img class="mountain" src ="https://tjkhara.github.io/sean-halpin-inspired/images/mountain.png" alt="Mountain">
+    </div>
+    <div class="middle-container">
+        <div class="profile">
+            <img  class= "vipul_img" src="..//HTML - personal Site/Screenshot 2023-07-17 224727.png" alt="Vipul's Image">
+            <h2>Hello</h2>
+            <p>I am student and learner . I'm very much into coding.</p>
+        </div>
+        <div class="skill">
+            <h2 class ="ok">My Skill</h2>
+            <div class="skill-row">
+            <img class = "skill_image_1"src="https://img.freepik.com/free-vector/hacker-operating-laptop-cartoon-icon-illustration-technology-icon-concept-isolated-flat-cartoon-style_138676-2387.jpg?w=740&t=st=1690378630~exp=1690379230~hmac=a0ededc1565b96674d3a776cc6672b264d267866e0838dfe3a16f73c59d00fd9" alt="Skill image">
+            <h3>Dynamic Programming</h3>
+            <p>I started learning to code when i was 17 year old because i wanted to make my own software as well as games. Over time , I have gained a wealth of experience in problem solving.</p>
+                </div>   
+        <div class="skill-row">
+            <img 
+            class = "skill_image_2"src="https://cdn.vectorstock.com/i/1000x1000/27/37/smiling-boy-sitting-at-laptop-and-learning-coding-vector-23502737.webp" alt="Image">
+            <h3>Design & Development</h3>
+            <p>Apart from coding , I am also very much in into design and development.</p>
+        </div>
+    </div>
+    <div class="contact-me">
+        <h2>Get to Touch</h2>
+        <h3>If you want to hang out , my socials are below </h3>
+        <a class="btn" href="mailto:vranjan29@gmail.com">CONTACT ME</a>
+    </div>
+     
+    <div class="bottom-container">
+        <a class="footer-link" href="https://www.facebook.com/vipul.ranjan.73/">Facebook</a>
+        <a class="footor-link" tagret = "_blank" href="https://www.instagram.com/funkyjester_150/">Instagram</a>
+        <p>2023 Vipul Ranjan</p>
+    </div>
+</body>
+</html>
